# bedrock-converse

./: .gitignore  README.md  pyproject.toml
src/bedrock/: __init__.py  bases.py  callbacks.py  converse.py  embedding.py  mantle.py  tools.py
tests/: test_callbacks.py  test_converse.py  test_embedding.py  test_mantle.py  test_tools.py
