[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-converse"
version = "0.1.0"
description = "Python SDK for AWS Bedrock Converse API with tool calling, embeddings, and vector search"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "boto3>=1.28",
    "pydantic>=2.0",
    "json5",
    "json-repair",
]

[project.optional-dependencies]
image = ["pillow>=9.0"]
all = ["pillow>=9.0", "jsonschema"]

[tool.setuptools.packages.find]
where = ["src"]
